# carbon

./: Cargo.toml
docs/comments/: state_transfer.comment
docs/pseudocode/: discovery.pseudocode  dispatcher.pseudocode  links.pseudocode  replica.pseudocode  structures.pseudocode  view.pseudocode
src/: lib.rs
src/account/: account.rs  account_settings.rs  account_summary.rs  correct_state.rs  corrupted_state.rs  entry.rs  errors.rs  id.rs  mod.rs  operation.rs  state.rs  state_summary.rs
src/account/operations/: abandon.rs  claim.rs  collect.rs  deposit.rs  mint.rs  mod.rs  support.rs  withdraw.rs
src/batch/prepare/: attachment.rs  batch.rs  mod.rs
src/broadcast/: mod.rs  prepare.rs  prepare_batch.rs  prepare_batch_root.rs
src/brokers/: mod.rs
src/brokers/commit/: broker_failure.rs  brokerage.rs  mod.rs  request.rs  submission.rs
src/brokers/prepare/: batch.rs  broker.rs  broker_settings.rs  brokerage.rs  failure.rs  inclusion.rs  mod.rs  ping_board.rs  reduction.rs  request.rs  submission.rs
src/brokers/signup/: broker.rs  broker_failure.rs  broker_settings.rs  failure.rs  mod.rs
src/brokers/test/: mod.rs  system.rs
src/churn/: churn.rs  mod.rs  resignation.rs  resolution.rs
src/commit/: batch_completion.rs  batch_completion_shard.rs  batch_completion_statement.rs  commit.rs  commit_proof.rs  completion.rs  completion_proof.rs  extract.rs  mod.rs  payload.rs  witness_statement.rs  witnessed_batch.rs
src/crypto/: aggregator.rs  certificate.rs  header.rs  identify.rs  mod.rs  rogue.rs  rogue_challenge.rs
src/data/: mod.rs  ping_board.rs  shift_vec.rs  sponge.rs  sponge_settings.rs
src/database/: database.rs  families.rs  mod.rs  signup.rs  zebras.rs
src/database/commit/: batch_holder.rs  commit.rs  mod.rs  payload_handle.rs
src/database/prepare/: advertisement.rs  batch_holder.rs  mod.rs  prepare.rs  prepare_handle.rs  state.rs
src/directory/: directory.rs  mod.rs
src/discovery/: client.rs  client_settings.rs  frame.rs  mod.rs  mode.rs  request.rs  response.rs  server.rs  server_settings.rs
src/discovery/server/: frame.rs  mod.rs  request.rs  response.rs  server.rs  server_settings.rs
src/discovery/test/: mod.rs  setup.rs  tests.rs
src/executables/: broker.rs  client.rs  config.rs  mod.rs  rendezvous.rs  replica.rs
src/lattice/: decision.rs  decisions.rs  element.rs  instance.rs  lattice_agreement.rs  lattice_agreement_settings.rs  lattice_element.rs  lattice_runner.rs  message.rs  mod.rs
src/lattice/lattice_runner/: certification.rs  disclosure.rs  mod.rs
src/lattice/messages/: certification_confirmation.rs  certification_request.rs  certification_update.rs  disclosure_echo.rs  mod.rs  (+2 more)
src/prepare/: batch.rs  batch_commit.rs  batch_commit_shard.rs  batch_commit_statement.rs  batch_root.rs  commit_shard.rs  commit_statement.rs  equivocation.rs  extract.rs  mod.rs  prepare.rs  prepare_settings.rs  reduction_statement.rs  signed_batch.rs  witness_statement.rs  witnessed_batch.rs
src/processing/: mod.rs  processor_settings.rs  signup_request.rs  signup_response.rs
src/processor/: mod.rs  signup.rs
src/signup/: allocation_range.rs  id_allocation.rs  id_assignment.rs  id_claim.rs  id_request.rs  mod.rs  signup_settings.rs
src/view/: certificate.rs  change.rs  increment.rs  install.rs  mod.rs  store.rs  transition.rs  view.rs
src/view_generator/: install_precursor.rs  lattice_instance.rs  message.rs  mod.rs  precursor.rs  sequence_lattice_brief.rs  sequence_lattice_element.rs  sequence_precursor.rs  sequence_proposal.rs  view_decision.rs  view_generator.rs  view_generator_settings.rs  view_lattice_brief.rs  view_lattice_element.rs  view_proposal.rs
src/voting/: change_request.rs  claim.rs  mod.rs  resignation.rs  resolution.rs
(+92 files in other folders)
