[package]
name = "carbon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }
rayon = { version = "1.5.1" }
futures = { version = "0.3" }

serde = { version = "~1.0", features = [ "derive", "rc" ] }

rand = { version = "0.8" }

bit-vec = { version = "0.6", features = ["serde"] }
lazy_static = { version = "1.4.0" }

talk = { git = "https://github.com/Distributed-EPFL/talk", features=[ "test_utilities" ] }
zebra = { git = "https://github.com/Distributed-EPFL/zebra" }
doomstack = { git = "https://github.com/Distributed-EPFL/doomstack" }
buckets = { git = "https://github.com/Distributed-EPFL/buckets" }
