[package]
name = "carbon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = [ "macros", "net", "rt-multi-thread", "io-util", "sync", "time" ] }
rayon = { version = "1.5.1" }
futures = { version = "0.3" }

serde = { version = "~1.0", features = [ "derive", "rc" ] }

rand = { version = "0.8" }

bit-vec = { version = "0.6", features = ["serde"] }
lazy_static = { version = "1.4.0" }

itertools = { version = "0.10.3" }

talk = { git = "https://github.com/Distributed-EPFL/talk", features=[ "test_utilities" ], branch="benchmark" }
zebra = { git = "https://github.com/Distributed-EPFL/zebra", branch="benchmark" }
doomstack = { git = "https://github.com/Distributed-EPFL/doomstack" }
buckets = { git = "https://github.com/Distributed-EPFL/buckets" }

# Benchmark dependencies

bincode = { version = "1.3.3" }

log = { version = "0.4.0" }

clap = { version = "2.33.3", optional = true }
env_logger = { version = "0.9.0", optional = true }
serde_json = { version = "1.0.61", optional = true }

[features]
benchmark = ["clap", "env_logger", "serde_json"]

[[bin]]
name = "replica"
path = "src/executables/replica.rs"
required-features = ["benchmark"] 

[[bin]]
name = "rendezvous"
path = "src/executables/rendezvous.rs"
required-features = ["benchmark"] 

[[bin]]
name = "broker"
path = "src/executables/broker.rs"
required-features = ["benchmark"]

[[bin]]
name = "client"
path = "src/executables/client.rs"
required-features = ["benchmark"] 